# url2epub

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
tests/: test_cli.py  test_core.py
url2epub/: __init__.py  cli.py  core.py
